<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>ImageControlWidget</class>
 <widget class="QWidget" name="ImageControlWidget">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>340</width>
    <height>132</height>
   </rect>
  </property>
  <layout class="QVBoxLayout" name="verticalLayout">
   <item>
    <widget class="QGroupBox" name="imageControlGroupBox">
     <property name="title">
      <string>Image Control</string>
     </property>
     <property name="flat">
      <bool>true</bool>
     </property>
     <layout class="QFormLayout" name="formLayout">
      <item row="0" column="0">
       <widget class="QLabel" name="aspectRatioLabel">
        <property name="text">
         <string>Aspect Ratio</string>
        </property>
       </widget>
      </item>
      <item row="0" column="1">
       <widget class="QComboBox" name="aspectRatioComboBox"/>
      </item>
      <item row="1" column="0">
       <widget class="QLabel" name="rotationLabel">
        <property name="text">
         <string>Rotation</string>
        </property>
       </widget>
      </item>
      <item row="1" column="1">
       <widget class="QComboBox" name="rotationComboBox"/>
      </item>
     </layout>
    </widget>
   </item>
  </layout>
 </widget>
 <resources/>
 <connections/>
</ui>
